<resources>

    <!-- UTILS STRINGS -->

    <string name="vigi_email">vigi.noreply@gmail.com</string>
    <string name="vigi_password">aR7-HER-pdh-xW9</string>
    <string name="internet_connection_not_available_text">Internet connection is not available</string>
    <string name="app_name_text">vigi</string>

    <!-- AUTH STRINGS -->

    <string name="name_app_text">Vigi</string>
    <string name="password_hint_text">Password</string>
    <string name="sign_up_here_text">Sign up here!</string>
    <string name="forgotten_password_btn_text">Forgotten password?</string>
    <string name="log_in_text">Login</string>
    <string name="no_account_text">You don\'t have an account?</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="e_mail_hint_text">E-mail</string>
    <string name="register_text">Register</string>
    <string name="sign_in_here_btn">Sign in here.</string>
    <string name="terms_and_conditions_text">Terms and Conditions</string>
    <string name="select_a_profile_picture_text">Select your profile picture.</string>
    <string name="load_spinner_image">load_spinner</string>
    <string name="ok_text">OK</string>
    <string name="name_hint_text">Name</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="number_hint_text">Phone number</string>
    <string name="date_of_birth_text">Date of birth</string>
    <string name="code_received_text">Code Received</string>
    <string name="welcome_to_text">Welcome to</string>
    <string name="logo_image">logo</string>
    <string name="welcome_back_text">Welcome back,</string>
    <string name="sign_in_to_continue_text">sign in to continue</string>
    <string name="medical_kit_image">medical_kit</string>
    <string name="staff_image">staff</string>
    <string name="home_slide_two_text">Explore our amazing staff,\n always ready to assist you</string>
    <string name="home_slide_text">Get the help you need,\n right in the corner.</string>
    <string name="home_care_image">home_care</string>
    <string name="home_slide_three_text">Get daily assistance at your house.</string>
    <string name="error_text">Error</string>
    <string name="please_enter_your_e_mail_text">Please enter your e-mail</string>
    <string name="email_afterwards_text">An e-mail will be sent to you afterwards!</string>

    <!-- PATIENT STRINGS -->

    <string name="events_fragment_text">Events fragment</string>
    <string name="timeline_fragment_text">Timeline fragment</string>
    <string name="photo_person_text">photo_person</string>
    <string name="video_help_image">video_help_background</string>
    <string name="call_help_image">call_help_background</string>
    <string name="nav_home_text">Help</string>
    <string name="nav_health_text">Health</string>
    <string name="nav_events_text">Events</string>
    <string name="nav_timeline_text">Timeline</string>
    <string name="video_care_text">Video support</string>
    <string name="call_care_text">Call support</string>
    <string name="patient_name_example_text">Anna Baker</string>
    <string name="medical_file_text">Medical File</string>
    <string name="health_record_text">Health Record</string>
    <string name="hello_blank_fragment_text">Hello blank fragment</string>
    <string name="logo_white_image">logo_white</string>
    <string name="get_started_text">Get started,</string>
    <string name="sign_up_to_continue_text">sign up to continue</string>

    <string name="currency">EUR</string>
    <string name="medium_text">


    "Material is the metaphor. A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic."

    </string>

    <string name="large_text">


        "Material is the metaphor. A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="know_more_text">Know more</string>
    <string name="minutes">min</string>

</resources>
