<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/image_logo" />

    <LinearLayout
        android:id="@+id/welcome_to_vigi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:transitionName="welcomeToVigi">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_to_text"
            android:textColor="@color/colorTheme"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_text"
            android:textAllCaps="true"
            android:textColor="@color/colorTheme"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>