<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/colorBlueLight">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:theme="@style/ToolbarStyleWhite">

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/get_started_text"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/sign_up_to_continue_text"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/profile_photo_view"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="3dp"
                    android:background="@drawable/utils_oval_border_2dp_white"
                    android:layout_gravity="start">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera_white_24dp"
                        android:layout_centerInParent="true" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_a_profile_picture_text"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_hint_text"
                    android:textAlignment="center"
                    android:paddingBottom="0dp"
                    style="@style/TextView.InputLabel" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="true"
                        app:ccp_textGravity="LEFT"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_contentColor="@color/colorDark"
                        app:ccpDialog_showPhoneCode="true" />

                    <vigi.patient.view.utils.editText.ClearableNotLockableEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:id="@+id/phone_number"
                        android:textColor="@color/colorDark"
                        android:hint="@string/number_hint_text"
                        android:textColorHint="@color/colorWhite"
                        android:background="@null"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:inputType="phone"
                        android:paddingStart="0dp"
                        android:paddingEnd="10dp">
                    </vigi.patient.view.utils.editText.ClearableNotLockableEditText>

                </LinearLayout>

                <View
                    android:background="@color/colorWhite"
                    android:layout_width = "match_parent"
                    android:layout_height="0.75dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite">

                <vigi.patient.view.utils.editText.ClearableNotLockableEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:imeOptions="actionNext"
                    android:id="@+id/name"
                    android:textColor="@color/colorDark"
                    android:hint="@string/name_hint_text"
                    android:drawablePadding="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:backgroundTint="@color/colorWhite"
                    android:ems="10"
                    android:inputType="textVisiblePassword"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp">

                </vigi.patient.view.utils.editText.ClearableNotLockableEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite">

                <vigi.patient.view.utils.editText.ClearableNotLockableEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/birthday"
                    android:textColor="@color/colorDark"
                    android:hint="@string/date_of_birth_text"
                    android:drawablePadding="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:backgroundTint="@color/colorWhite"
                    android:inputType="none"
                    android:ems="10"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp">
                </vigi.patient.view.utils.editText.ClearableNotLockableEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite">

                <vigi.patient.view.utils.editText.ClearableNotLockableEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:imeOptions="actionNext"
                    android:id="@+id/email"
                    android:textColor="@color/colorDark"
                    android:hint="@string/e_mail_hint_text"
                    android:drawablePadding="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:backgroundTint="@color/colorWhite"
                    android:ems="10"
                    android:inputType="textVisiblePassword"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp">
                </vigi.patient.view.utils.editText.ClearableNotLockableEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorWhite">

                <vigi.patient.view.utils.editText.ClearableNotLockableEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:imeOptions="actionGo"
                    android:id="@+id/password"
                    android:textColor="@color/colorDark"
                    android:hint="@string/password_hint_text"
                    android:drawablePadding="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:backgroundTint="@color/colorWhite"
                    android:ems="10"
                    android:inputType="textVisiblePassword"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp">
                </vigi.patient.view.utils.editText.ClearableNotLockableEditText>

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/terms_and_conditions_text"
                    android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle.Inverse"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical">

                    <Button
                        android:id="@+id/register_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="@drawable/utils_rectangle_rounded_200dp_border_1dp_white"
                        android:gravity="center"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:text="@string/register_text"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/load_spinner_image"
                        android:src="@drawable/image_waiting_spinner"
                        android:visibility="invisible" />

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="end|center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_text"
                android:textColor="@color/colorWhite"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_below="@id/account_text"
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_here_btn"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
