<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".register.Home">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_layout_logoimage"
            android:layout_width="70dp"
            android:layout_height="68dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="118dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo_image" />

        <TextView
            android:id="@+id/home_layout_apptextname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_layout_logoimage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/app_name_text"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView"
            android:textColor="@color/colorwhite"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/home_layout_register_btn"
            android:layout_width="300dp"
            android:layout_height="53dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="123dp"
            android:background="@drawable/rounded_blue"
            android:text="@string/register_text"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView"
            android:textColor="@color/colorwhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/home_layout_login_btn"
            android:layout_width="300dp"
            android:layout_height="53dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="61dp"
            android:background="@drawable/rounded_white"
            android:text="@string/log_in_btn_text"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView"
            android:textColor="@color/colorwhite"
            android:textSize="20sp" />

    </RelativeLayout>

    </RelativeLayout>