<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.authentication.home.HomeAuthActivity"
    android:background="@color/colorWhite"
    android:id="@+id/background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:transitionName="welcomeToVigi"
                        android:orientation="vertical"
                        android:gravity="center"
                        tools:ignore="UselessParent">

                        <TextView
                            android:layout_marginTop="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome_to_text"
                            android:textColor="@color/colorTheme"
                            android:textSize="20sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name_text"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:textColor="@color/colorTheme"
                            android:textSize="35sp"/>

                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_circle"
                    android:layout_width="210dp"
                    android:layout_height="210dp"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/utils_custom_ring"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:progress="0"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:gravity="bottom">

                    <LinearLayout
                        android:layout_marginBottom="30dp"
                        android:id="@+id/dot_layout"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="30dp"
                        android:gravity="center">

                </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/slide_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v4.view.ViewPager>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/colorTheme"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorWhite"
                android:text="@string/log_in_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/colorBlueLight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorWhite"
                android:text="@string/register_text"
                android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>